// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blank request 1`] = `
<div>
  <div>
    <div
      className="sh sh--y"
    >
      <h2
        className="sh-title"
      >
        Contact Info
      </h2>
    </div>
    <p
      className="m-v300 t--info"
    >
      Contact info will not be shared with public. Leave blank to submit anonymously.
    </p>
    <label
      className="txt"
    >
      <span
        className="txt-l"
      >
        First Name 
      </span>
      <input
        className="txt-f"
        name="firstName"
        onChange={[Function]}
        placeholder="First Name"
        style={
          Object {
            "width": "100%",
          }
        }
        type="text"
        value=""
      />
    </label>
    <label
      className="txt"
    >
      <span
        className="txt-l"
      >
        Last Name 
      </span>
      <input
        className="txt-f"
        name="lastName"
        onChange={[Function]}
        placeholder="Last Name"
        style={
          Object {
            "width": "100%",
          }
        }
        type="text"
        value=""
      />
    </label>
    <label
      className="txt"
    >
      <span
        className="txt-l"
      >
        Email
      </span>
      <input
        className="txt-f"
        name="email"
        onChange={[Function]}
        placeholder="Email"
        style={
          Object {
            "width": "100%",
          }
        }
        type="email"
        value=""
      />
    </label>
    <label
      className="txt"
    >
      <span
        className="txt-l"
      >
        Phone
      </span>
      <input
        className="txt-f"
        name="phone"
        onChange={[Function]}
        placeholder="Phone"
        style={
          Object {
            "width": "100%",
          }
        }
        type="tel"
        value=""
      />
    </label>
  </div>
  <div
    className="g"
  >
    <div
      className="g--9"
    />
    <button
      className="btn g--33 m-v300"
      disabled={false}
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`filled request 1`] = `
<div>
  <div>
    <div
      className="sh sh--y"
    >
      <h2
        className="sh-title"
      >
        Contact Info
      </h2>
    </div>
    <p
      className="m-v300 t--info"
    >
      Contact info will not be shared with public. Leave blank to submit anonymously.
    </p>
    <label
      className="txt"
    >
      <span
        className="txt-l"
      >
        First Name 
      </span>
      <input
        className="txt-f"
        name="firstName"
        onChange={[Function]}
        placeholder="First Name"
        style={
          Object {
            "width": "100%",
          }
        }
        type="text"
        value="Carol"
      />
    </label>
    <label
      className="txt"
    >
      <span
        className="txt-l"
      >
        Last Name 
      </span>
      <input
        className="txt-f"
        name="lastName"
        onChange={[Function]}
        placeholder="Last Name"
        style={
          Object {
            "width": "100%",
          }
        }
        type="text"
        value="Danvers"
      />
    </label>
    <label
      className="txt"
    >
      <span
        className="txt-l"
      >
        Email
      </span>
      <input
        className="txt-f"
        name="email"
        onChange={[Function]}
        placeholder="Email"
        style={
          Object {
            "width": "100%",
          }
        }
        type="email"
        value="marvel@alphaflight.gov"
      />
    </label>
    <label
      className="txt"
    >
      <span
        className="txt-l"
      >
        Phone
      </span>
      <input
        className="txt-f"
        name="phone"
        onChange={[Function]}
        placeholder="Phone"
        style={
          Object {
            "width": "100%",
          }
        }
        type="tel"
        value="6175551234"
      />
    </label>
  </div>
  <div
    className="g"
  >
    <div
      className="g--9"
    />
    <button
      className="btn g--33 m-v300"
      disabled={false}
      onClick={[Function]}
    >
      Submit
    </button>
  </div>
</div>
`;
